test/error/lexing_files/empty_char.err
File "lexing_files/empty_char.st", line 1, character 7:
1 | x := ''.
          ^
Error: Lexing error.
Hint: Char is empty.
